--- a/.env
+++ b/.env
@@ -7,6 +7,10 @@ DB_USER=root
 DB_PASSWORD=WFpTkGSTwgvAPFkSMWZUNuRyUtCELCxJ
 DB_NAME=railway
 JWT_SECRET=your_jwt_secret_key
-
-
 ADMIN_REGISTRATION_SECRET=3333
+
+MYSQLHOST:mysql.railway.internal
+MYSQLUSER:root
+MYSQLPASSWORD:WFpTkGSTwgvAPFkSMWZUNuRyUtCELCxJ
+MYSQLBATABASE:railway
+MYSQLPORT:3306
