--- a/.env
+++ b/.env
@@ -13,5 +13,5 @@ ADMIN_REGISTRATION_SECRET=3333
 MYSQLHOST:mysql.railway.internal
 MYSQLUSER:root
 MYSQLPASSWORD:WFpTkGSTwgvAPFkSMWZUNuRyUtCELCxJ
-MYSQLBATABASE:railway
+MYSQLDATABASE:railway
 MYSQLPORT:3306
