--- a/.env
+++ b/.env
@@ -10,8 +10,8 @@ DB_NAME=railway
 JWT_SECRET=your_jwt_secret_key
 ADMIN_REGISTRATION_SECRET=3333
 
-MYSQLHOST:mysql.railway.internal
-MYSQLUSER:root
-MYSQLPASSWORD:WFpTkGSTwgvAPFkSMWZUNuRyUtCELCxJ
-MYSQLDATABASE:railway
-MYSQLPORT:3306
+MYSQLHOST=mysql.railway.internal
+MYSQLUSER=root
+MYSQLPASSWORD=WFpTkGSTwgvAPFkSMWZUNuRyUtCELCxJ
+MYSQLDATABASE=railway
+MYSQLPORT=3306
