--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ DB_NAME=railway
 JWT_SECRET=your_jwt_secret_key
 ADMIN_REGISTRATION_SECRET=3333
 
-MYSQLHOST=mysql.railway.internal
+MYSQLHOST=containers-us-west-42.railway.app
 MYSQLUSER=root
 MYSQLPASSWORD=UtqviDYUsrfAipsjwIspemFUblDfZrpI
 MYSQLDATABASE=railway
